--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-query": "^5.59.0",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -23,6 +28,7 @@
     "next": "14.2.13",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.13.0",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
@@ -30,17 +36,20 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-simplemde-editor": "^5.2.0",
-    "tailwind-merge": "^2.5.2",
+    "sass": "^1.80.6",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1",
     "zod": "^3.23.8",
     "zod-prisma-types": "^3.1.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/draft-js": "^0.11.18",
+    "@types/draftjs-to-html": "^0.8.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
