--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-query": "^5.59.0",
@@ -21,12 +22,12 @@
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "axios": "^1.7.7",
+    "better-auth": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "easymde": "^2.18.0",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
-    "next-auth": "^4.24.7",
     "next-cloudinary": "^6.13.0",
     "radix-ui": "^1.0.1",
     "react": "^18",
