--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.7",
     "better-auth": "^1.0.10",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "easymde": "^2.18.0",
     "lucide-react": "^0.445.0",
