--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
