--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@sentry/nextjs": "^8.47.0",
     "@tanstack/react-query": "^5.59.0",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
